<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AgregarProducto">

    <ImageButton
        android:id="@+id/ImgAgregarProdu"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imgAddPrdructo"
        tools:srcCompat="@drawable/baseline_add_photo_alternate" />

    <EditText
        android:id="@+id/insProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insAddProduct"
        android:inputType="textPersonName"
        android:textColorHint="#78909C"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/insDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insDescripcionAddAroduct"
        android:inputType="textPersonName"
        android:textColorHint="#78909C"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/insCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insCategoriaAddProduct"
        android:inputType="textPersonName"
        android:textColorHint="#78909C"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/insPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insPrecioAddProduct"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnAddProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddProduct" />
</LinearLayout>